--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "myportfolio",
   "version": "0.1.0",
-  "homepage": "yoboisandy.github.io",
+  "homepage": "https://yoboisandy.github.io/MyReactPortolio",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
