changed homepage and added cname

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myportfolio",
-  "homepage": "https://yoboisandy.github.io/ReactPortfolio",
+  "homepage": "https://sandeep-sharma.com.np",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
